<resources>
    <string name="app_name">Audio Sampler</string>
    <string name="amplitude">Amplitude</string>
    <string name="intensity">Intensity</string>
    <string name="frequency">Frequency</string>
    <string name="ip_address">192.168.1.254</string>
    <string name="inputFrequency">15000</string>
    <string name="start_record">Start Recording</string>
    <string name="stop_record">Stop Recording</string>
    <string name="reset">Reset</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
